--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- styling links   -->
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- styling links   -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -53,10 +57,47 @@
                 <img src="assets/images/Vector 32.png" alt="">
                 <p>Let's make your work more organize and easily using the Taskio Dashboard with many of the latest
                     featuresin managing work every day.</p>
-                    <button>Try free trial</button>
-                    <button>View Demo</button>
+                <div class="btns">
+                    <button class="btn-1">Try free trial</button>
+                    <button class="btn-2"><svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M20 4.16675C28.7432 4.16675 35.8333 11.2553 35.8333 20.0001C35.8333 28.7448 28.7432 35.8334 20 35.8334C11.2552 35.8334 4.16666 28.7448 4.16666 20.0001C4.16666 11.2553 11.2552 4.16675 20 4.16675Z"
+                                stroke="#191A15" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M25 19.9919C25 18.64 18.0709 14.3152 17.2848 15.0928C16.4988 15.8705 16.4232 24.0401 17.2848 24.891C18.1464 25.7449 25 21.3438 25 19.9919Z"
+                                stroke="#191A15" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        View Demo</button>
+                </div>
+
             </div>
-            <div class="right"></div>
+            <div class="right">
+                <div class="amount-bg">
+                    <div class="amount">
+                        <div class="amount-left">
+                            <p>Enter amount</p>
+                            <p class="p-2">$450..00</p>
+                        </div>
+                        <div class="amount-right">
+                            <button>Send</button>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                </div>
+                <div class=" income-bg">
+                    <div class="amount">
+                        <div class="amount-left">
+                            <p>Total Income</p>
+                            <p class="p-2">$245.00</p>
+                        </div>
+                        <div class="amount-right">
+                            <img src="assets/images/bar-chart-2 1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <img src="assets/images/Group 1940.png" alt="">
+            </div>
         </div>
 
     </div>
